Adding some icons

--- a/src/components/waterbody-details-modal/waterbody-details-modal.css
+++ b/src/components/waterbody-details-modal/waterbody-details-modal.css
@@ -10,3 +10,9 @@
 .waterbody_details__dialog_title__text {
   padding-right: 4px;
 }
+
+.svg {
+  width: 56px;
+  height: auto;
+  margin-right: 10px;
+}
