--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ div.Container {
   display: flex;
   flex-direction: column;
   height: calc(100vh - 64px);
+  min-height: 550px;
   padding-top: 24px;
 }
 
