Making minor tweaks

--- a/src/components/fishing-regulation-table/fishing-regulation-table.css
+++ b/src/components/fishing-regulation-table/fishing-regulation-table.css
@@ -1,3 +1,8 @@
+.fishing_regulation_table {
+  margin-bottom: 0.35em;
+  min-height: 300px;
+}
+
 .fishing_regulation_table__name_cell {
   width: 100%;
 }
