Adjusting screen title on smaller resolutions

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,12 @@ div.Container {
   }
 }
 
+@media only screen and (max-width: 600px) {
+  .App__title {
+    font-size: 2em;
+  }
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
